# reinforcement

./: .flake8  .gitignore  README.md  config.py  database_ops.py  launch_app.py  play_game.py  pyproject.toml  requirements.txt  scratch.py  test_database_ops.py  timetracking.py  web_app.py  web_app_routes.py
.github/workflows/: ci.yml
ai_gui/: README.md  app.py  sample_gui.py
archive/: requirements-dev.txt
archive/example1/: scratch.py  simulation.py  test_simulation.py
archive/example2/: README  (+4 more)
example1/: scratch.py  simulation.py
example2/: deepqex.py  taking_notes.py
farming/: environment.py
learning_pygame/: game.py  scratch.py  scratch3.py
medium/: README.md  environment.py  food_matrix.py  model.py  model_management.py  model_training.py  monitoring.py  resources.py  scratch.py  simulation.py  spatial_methods.py  test_food_matrix.py
meh/: README.md  ex.py  scratch.py
model/: 1.pth  2.pth
replay/: 1.json  10.json  101.json  108.json  109.json  110.json  111.json  113.json  114.json  115.json  116.json  12.json  122.json  123.json  124.json  129.json  130.json  131.json  134.json  137.json  139.json  141.json  142.json  143.json  144.json  147.json  149.json  15.json  150.json  151.json  152.json  154.json  160.json  162.json  167.json  168.json  169.json  172.json  175.json  176.json  (+73 more)
resource_gathering/: example.py
simplest/: README.md  ex.py  example.py  scratch.py
static/: main.db
templates/: experiment.html  home.html
train_pygame/: README.md  clock_example.py  model.py  scratch.py  scratch3.py  test_model.py  view_run.py
(+416 files in other folders)
